# fspacker

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  tox.ini  tox.toml
.aliyun/: pyproject-poetry.toml  pyproject.toml  test-build.yml
.aliyun/pull_request_template/merge_template/: normal_merge_message.md  squash_merge_message.md
.gitea/workflows/: python-env.yml
.github/workflows/: python-env.yml  python-publish.yml
docs/: conf.py  index.rst
examples/base_helloworld/: base_helloworld.py  module_d.py
examples/base_helloworld/core/: module_e.py  module_f.py  module_g.py
examples/base_helloworld/modules/: module_b.py
examples/base_office/: base_office.py
examples/ex01_helloworld_console/: ex01_helloworld_console.py  module_d.py
examples/ex01_helloworld_console/core/: module_g.py
examples/ex02_hello_gui/: ex02_hello_gui.py
examples/ex02_tkinter/: config.py  ex02_tkinter.py
examples/ex02_tkinter/assets/: config.yml
examples/ex02_tkinter/modules/: module_a.py
examples/ex03_pyqt_simple/: ex03_pyqt_simple.py
examples/ex04_pyside_complex/depends/: ui_CNMapViewer.py
examples/ex05_tkinter/: ex05_tkinter.py
examples/ex07_tarfile/: ex07_tarfile.py
examples/ex13_pypdf/: ex13_pypdf.py
examples/ex14_py7zr/: ex14_py7zr.py
examples/ex21_pygame_conway/: ex21_pygame_conway.py
examples/ex22_matplotlib/: ex22_matplotlib.py
examples/ex25_pytorch/: ex25_pytorch.py
examples/game_pygame/: game_pygame.py
examples/gui_pyside2/: gui_pyside2.py  resources_rc.py
examples/gui_pyside2/depends/: CNMapViewer.py  CNMapViewer.ui  ui_CNMapViewer.py
examples/gui_tkinter/: gui_tkinter.py
examples/gui_tkinter/modules/: module_a.py  module_b.py
examples/math_numba/: math_numba.py
examples/math_torch/: math_torch.py
examples/nolib/: nolib.py
examples/numba/: example_extending.py
examples/py7zr/: py7zr_test.py
examples/pypdf/: pypdf_test.py
examples/pyqt/: pyqt.py
examples/snakegame/: snakegame.py
examples/torch/: torch_test.py
fspacker/: __init__.py  cli.py  common.py  config.py  process.py  settings.py
fspacker/conf/: settings.py
fspacker/core/: analyzers.py  archive.py  commands.py  libraries.py  libraryinfo.py  parsers.py  process.py  resources.py
fspacker/packer/: base.py  depends.py  entry.py  library.py  runtime.py
fspacker/packer/libspec/: base.py  gui.py  mixins.py  office.py  sci.py  tkinter.py
fspacker/packers/: base.py  depends.py  entry.py  library.py  runtime.py
fspacker/packers/libspec/: base.py  gui.py
fspacker/parser/: base.py  folder.py  source.py  target.py
fspacker/parsers/: base.py  folder.py  source.py
fspacker/utils/: archive.py  checksum.py  config.py  libs.py  performance.py  persist.py  repo.py  resources.py  trackers.py  url.py  wheel.py  zip.py
fsploader/: Cargo.toml
fsploader/src/: main.rs  utils.rs
src/fspacker/: __main__.py  cli.py  common.py  config.py  dirs.py  process.py
src/fspacker/assets/: depend_tree.toml  depends.toml
src/fspacker/core/: process.py
src/fspacker/packer/: base.py  depends.py  entry.py  library.py  runtime.py  tkinter.py
src/fspacker/packers/: entry.py  library.py  runtime.py
src/fspacker/parser/: common.py  deps.py  dirs.py  entry.py  folder.py  library.py  project.py  runtime.py  source.py
src/fspacker/parsers/: base.py  folder.py  (+1 more)
tests/: common.py  conftest.py  test_analyzers.py  test_conf_settings.py  test_dirs.py  test_packer.py  test_parser.py  test_process.py  test_source_parser.py  test_utils.py  test_utils_runtime.py  utils.py
(+17 files in other folders)
