[tool.poetry]
name = "fspacker"
version = "0.6.0"
description = ""
authors = ["gooker_young <gooker_young@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.8"
pkginfo = "^1.12.0"
rtoml = "~0.11"
stdlib-list = "~0.10"
types-requests = "^2.32.0.20241016"
requests = "^2.32.3"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.poetry.scripts]
fsp = "fspacker.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
tox = "^4.23.2"
coverage = "~7.5"
pytest-benchmark = "~4"
pytest-html = "~4.1"
pytest-cov = "~4"
mypy = "^1.14.1"
pysnooper = "^1.2.1"
black = "~24"
psutil = "^6.1.1"
setuptools = "~75"


[tool.poetry.group.docs.dependencies]
sphinx = "~7"
sphinx-autodoc-typehints = "~2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
