[project]
name = "fspacker"
dynamic = ["version"]
description = "Fast & Simple Packer toolset for python."
authors = [{ name = "gooker_young", email = "gooker_young@qq.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.8",
    "packaging>=24.2",
    "pkginfo>=1.12.0",
    "requests>=2.32.3",
    "stdlib-list>=0.10.0",
    "toml>=0.10.2",
]

[project.scripts]
fsp = "fspacker.cli:main"
fsupdate = "fspacker.cli:update"

[tool.uv]
index-url = 'https://pypi.tuna.tsinghua.edu.cn/simple/'

[dependency-groups]
dev = [
    "black>=24.8.0",
    "coverage>=7.6.1",
    "pytest-benchmark>=4.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "tox>=4.24.1",
    "types-requests>=2.32.0.20241016",
    "types-toml>=0.10.8.20240310",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "mypy>=1.14.1",
]
doc = ["sphinx>=7.1.2", "sphinx-autodoc-typehints>=2.0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets]
sources = ["fspacker"]

[tool.hatch.version]
path = "fspacker/__init__.py"
