[project]
name = "fspacker"
dynamic = ["version"]
description = "Fast & Simple Packer toolset for python."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.8",
    "packaging>=24.2",
    "pkginfo>=1.12.0",
    "requests>=2.32.3",
    "stdlib-list>=0.10.0",
    "toml>=0.10.2",
]
[[project.authors]]
name = "gooker_young"
email = "gooker_young@qq.com"

[dependency-groups]
doc = ["sphinx>=7.1.2", "sphinx-autodoc-typehints>=2.0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fsp = "fspacker.cli:main"
fsupdate = "fspacker.cli:update"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
dev-dependencies = [
    "mypy>=1.14.1",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "tox>=4.24.1",
    "types-requests>=2.32.0.20241016",
    "types-toml>=0.10.8.20240310",
]

[tool.mypy]
exclude = ["docs/", "examples/", "tests/"]

[tool.ruff]
line-length = 120
fix = true
show-fixes = true
output-format = "full"
exclude = ["**/ui_*.py", "**/*_rc.py"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W"]

[tool.hatch.version]
path = "fspacker/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
